<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/trybg">


    <Button
        android:text="@string/back"
        android:layout_width="@dimen/one_twenty"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:textColor="@color/white"
        android:background="@drawable/buttons"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:layout_width="@dimen/five_fifty"
        android:layout_height="@dimen/thousand_thirty"
        android:scaleType="matrix"
        android:id="@+id/imageView"
        android:layout_above="@+id/save" />


    <ImageView
        android:id="@+id/out"
        android:scaleType="matrix"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/imageView"
        android:layout_alignBottom="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignRight="@id/imageView"
        />

    <Button
        android:text="@string/save"
        android:layout_width="@dimen/one_twenty"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:textColor="@color/white"
        android:background="@drawable/buttons"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/back" />

    <Button
        android:text="@string/add_pic"
        android:layout_width="@dimen/one_twenty"
        android:layout_height="wrap_content"
        android:id="@+id/frame"
        android:textColor="@color/white"
        android:background="@drawable/buttons"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>